@@ -8,6 +8,8 @@
 namespace FOF30\Utils\FEFHelper;
 
 use FOF30\Container\Container;
+use FOF30\View\DataView\DataViewInterface;
+use FOF30\View\DataView\Raw;
 
 abstract class Html
 {
@@ -105,6 +107,61 @@ JS;
 			</div>
 		</div>
 HTML;
+
+		return $html;
+	}
+
+	/**
+	 * Returns the drag'n'drop reordering field for Browse views
+	 *
+	 * @param DataViewInterface $view          The DataView you're rendering against
+	 * @param string            $orderingField The name of the field you're ordering by
+	 * @param string            $order         The order value of the current row
+	 * @param string            $class         CSS class for the ordering value INPUT field
+	 * @param string            $icon          CSS class for the d'n'd handle icon
+	 *
+	 * @return string
+	 */
+	public static function dragDropReordering(DataViewInterface $view, $orderingField, $order, $class = 'input-mini', $icon = 'icon-menu')
+	{
+		$dndOrderingActive = $view->getLists()->order == $orderingField;
+
+		// Default inactive ordering
+		$html  = '<span class="sortable-handler inactive" >';
+		$html .= '<span class="' . $icon . '"></span>';
+		$html .= '</span>';
+
+		// The modern drag'n'drop method
+		if ($view->getPerms()->editstate)
+		{
+			$disableClassName = '';
+			$disabledLabel = '';
+
+			// DO NOT REMOVE! It will initialize Joomla libraries and javascript functions
+			$hasAjaxOrderingSupport = $view->hasAjaxOrderingSupport();
+
+			if (!$hasAjaxOrderingSupport['saveOrder'])
+			{
+				$disabledLabel = \JText::_('JORDERINGDISABLED');
+				$disableClassName = 'inactive tip-top';
+			}
+
+			$orderClass = $dndOrderingActive ? 'order-enabled' : 'order-disabled';
+
+			$html  = '<div class="' . $orderClass . '">';
+			$html .= 	'<span class="sortable-handler ' . $disableClassName . '" title="' . $disabledLabel . '" rel="tooltip">';
+			$html .= 		'<span class="' . $icon . '"></span>';
+			$html .= 	'</span>';
+
+			if ($dndOrderingActive)
+			{
+				$joomla35IsBroken = version_compare(JVERSION, '3.5.0', 'ge') ? 'style="display: none"': '';
+
+				$html .= '<input type="text" name="order[]" ' . $joomla35IsBroken . ' size="5" class="' . $class . ' text-area-order" value="' . $order . '" />';
+			}
+
+			$html .= '</div>';
+		}
 
 		return $html;
 	}
