@@ -1,5 +1,6 @@
 FOF 3.2.2
 ================================================================================
++ FEF HTML helper: dragDropReordering
 # [MEDIUM] DataModel constructor forcibly applies access level filtering when the model is doing asset tracking
 
 FOF 3.2.1
